2011-09-25  Valek Filippov

		* FH: more records parsing.

2011-09-23  Valek Filippov

		* Fix hexdump scrolling.
		* Improve FH detection.

2011-09-19  Valek Filippov

		* VSD: unstable support for ver 5.

2011-09-18  Valek Filippov

		* FH: show FH8 dictionary.

2011-09-18  Valek Filippov

		* FH: add parsing of v8 dictionary.

2011-09-15  Valek Filippov

		* FH: link to XForm in Rectangle and Oval.

2011-09-11  Valek Filippov

		* FH: Parse coords for Rectangle and Oval, minimal BasicLine parsing.
		* Add tooltip with FH X/Y for 2 and 4 bytes hexdump selections.

2011-09-10  Valek Filippov

		* Added '?a' and '?u' commands, chop spaces from '?x'.
		* Improvements in search result display.
		* CDR: search improvements.

2011-09-09  Valek Filippov

		* CDR: list all args in 'loda'

2011-09-08  Valek Filippov

		* Added '?x' command.

2011-09-07  Valek Filippov

		* Extended Doc.dict to support CDR r.e.

2011-09-06  Alexandre Prokoudine

		* RX2: Committed Frankie Fisher improvements 

2011-09-04  Valek Filippov

		* VSD: Parse TextField.
		* CDR: Adopted cdr_explorer RIFF parser.

2011-09-01  Valek Filippov

		* FH: More records.

2011-08-31  Valek Filippov

		* FH: Minimal support for Freehand format moved from fhre.
		* FH: Use dict to update status line

2011-08-29  Alexandre Prokoudine

		* RX2: Committed Frankie Fisher improvements 

2011-08-24  Valek Filippov 

		*RX2: small improvements
		#RX2: EQ, TRSH, COMP parsing

2011-08-23  Valek Filippov 

		* RX2: moved initial parsing of REX2 from rexpy to oletoy.

2011-08-22  Valek Filippov

		* VBA: "dir" is not always the last one
		* Try to show more than 3 bytes as utf-16 string

2011-08-21  Valek Filippov

		* Added "esc" command to parse 'Escher' blocks
		* XLS: Handle nested BOFs; group records by Begin/End brackets

2011-08-20  Valek Filippov

		* Add 'reload' to re-read same file.

2011-08-18  Valek Filippov

		* DOC: saving with screwing VBA modules
		* XLS: fix FONT, part of XF parsed