@@ -1,3 +1,8 @@
+2011-09-27  Valek Filippov
+
+		* FH: More records parsing, rewrite Xform as two parts record.
+		* ?r command.
+
 2011-09-25  Valek Filippov
 
 		* FH: more records parsing.
